# ChangeLog for app-admin/sysstat
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/sysstat/ChangeLog,v 1.66 2007/09/08 11:00:27 jer Exp $

*sysstat-8.0.0 (08 Sep 2007)

  08 Sep 2007; Jeroen Roovers <jer@gentoo.org> +sysstat-8.0.0.ebuild:
  Version bump (bug #191656).

  28 Aug 2007; Jeroen Roovers <jer@gentoo.org> -sysstat-7.1.5.ebuild:
  Remove deprecated development version.

  28 Aug 2007; Jeroen Roovers <jer@gentoo.org> sysstat-7.0.4-r2.ebuild:
  Fix trivial (QA) issues.

  28 Aug 2007; Jeroen Roovers <jer@gentoo.org> sysstat-7.1.6.ebuild:
  Fix trivial (QA) issues.

  24 Jul 2007; Jeroen Roovers <jer@gentoo.org> -sysstat-7.1.4.ebuild:
  Clean up.

*sysstat-7.1.6 (24 Jul 2007)

  24 Jul 2007; Jeroen Roovers <jer@gentoo.org> +sysstat-7.1.6.ebuild:
  Version bump.

  12 Jul 2007; Christoph Mende <angelos@gentoo.org> sysstat-7.0.4-r2.ebuild:
  Stable on amd64

  12 Jul 2007; Raúl Porcel <armin76@gentoo.org> sysstat-7.0.4-r2.ebuild:
  alpha stable

  22 Jun 2007; Jeroen Roovers <jer@gentoo.org> sysstat-7.1.5.ebuild:
  Fix patching (bug #182807)

*sysstat-7.1.5 (21 Jun 2007)

  21 Jun 2007; Jeroen Roovers <jer@gentoo.org> +sysstat-7.1.5.ebuild:
  Version bump (bug #182756).

  12 Jun 2007; Jeroen Roovers <jer@gentoo.org>
  +files/sysstat-7.1.4-strip.patch, sysstat-7.1.4.ebuild:
  Fix NLS (bug #181737). Clean up.

*sysstat-7.1.4 (10 Jun 2007)

  10 Jun 2007; Jeroen Roovers <jer@gentoo.org> metadata.xml,
  +sysstat-7.1.4.ebuild:
  Made myself maintainer. Version bump.

  08 Jun 2007; Jeroen Roovers <jer@gentoo.org> sysstat-7.0.4-r2.ebuild:
  Do not install the cron.d file (bug #172548 comment #5).

*sysstat-7.0.4-r2 (31 May 2007)

  31 May 2007; Markus Ullmann <jokey@gentoo.org>
  -files/sysstat-6.0.0-gcc4.diff, -files/sysstat-6.0.1-gcc4.diff,
  +files/sysstat.init.d, -sysstat-5.0.2.ebuild, -sysstat-6.0.1.ebuild,
  -sysstat-7.0.1.ebuild, -sysstat-7.0.4-r1.ebuild, +sysstat-7.0.4-r2.ebuild: