@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/sysstat
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/sysstat/ChangeLog,v 1.66 2007/09/08 11:00:27 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/sysstat/ChangeLog,v 1.67 2007/09/08 11:21:17 jer Exp $
+
+  08 Sep 2007; Jeroen Roovers <jer@gentoo.org> sysstat-8.0.0.ebuild:
+  Fix multilib issue (bug #190514).
 
 *sysstat-8.0.0 (08 Sep 2007)
 
